some cleaning code